--- a/src/D2L.Services.Core.Exceptions/D2L.Services.Core.Exceptions.csproj
+++ b/src/D2L.Services.Core.Exceptions/D2L.Services.Core.Exceptions.csproj
@@ -16,7 +16,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <OutputPath>..\build\output\</OutputPath>
+    <OutputPath>Debug\bin</OutputPath>
     <DebugSymbols>True</DebugSymbols>
     <DebugType>Full</DebugType>
     <Optimize>False</Optimize>
@@ -26,10 +26,10 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsNotAsErrors>1591,1030</WarningsNotAsErrors>
-    <DocumentationFile>..\build\output\D2L.Services.Core.Exceptions.xml</DocumentationFile>
+    <DocumentationFile>Debug\D2L.Services.Core.Exceptions.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>..\build\output\</OutputPath>
+    <OutputPath>Release\bin</OutputPath>
     <DebugType>pdbonly</DebugType>
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
@@ -38,7 +38,7 @@
     <WarningLevel>4</WarningLevel>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsNotAsErrors>1591,1030</WarningsNotAsErrors>
-    <DocumentationFile>..\build\output\Release\D2L.Services.Core.Exceptions.xml</DocumentationFile>
+    <DocumentationFile>Release\D2L.Services.Core.Exceptions.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
