--- a/src/D2L.Services.Core.Exceptions/D2L.Services.Core.Exceptions.nuspec
+++ b/src/D2L.Services.Core.Exceptions/D2L.Services.Core.Exceptions.nuspec
@@ -6,9 +6,7 @@
 		<version>$version$</version>
 		<authors>$author$</authors>
 		<owners>$author$</owners>
-		<projectUrl>https://git.dev.d2l/projects/D2LSER/repos/d2l.services.core.exceptions</projectUrl>
+		<projectUrl>https://github.com/Brightspace/D2L.Services.Core.Exceptions</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>An abstract exception class that represents an error that occurred while communicating with a service. Provides a consistent way to catch service related errors.</description>
-		<copyright>Copyright © Desire2Learn 2015</copyright>
 	</metadata>
 </package>
