--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,3 +25,11 @@ dotnet_csproj:
 artifacts:
   - path: src\**\*.nupkg
     name: NuGet
+
+deploy:
+  - provider: NuGet
+    api_key:
+      # D2L.Services.Core.Exceptions (Expires: 2019-12-03)
+      secure: WMUAm6usecFZkPPlSyWdbiMoyrw+SmAZhcT36+IEN+H3RCna+XchlPBTmZJLYs5W
+    on:
+      APPVEYOR_REPO_TAG: true
