deploy: package fixups

--- a/src/D2L.Services.Core.Exceptions/D2L.Services.Core.Exceptions.csproj
+++ b/src/D2L.Services.Core.Exceptions/D2L.Services.Core.Exceptions.csproj
@@ -8,7 +8,9 @@
     <Product>D2L.Services.Core.Exceptions</Product>
     <Description>An abstract exception class that represents an error that occurred while communicating with a service. Provides a consistent way to catch service related errors.</Description>
     <Company>D2L Corporation</Company>
+    <Authors>D2L</Authors>
     <Copyright>Copyright © D2L Corporation 2018</Copyright>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/Brightspace/D2L.Services.Core.Exceptions</PackageProjectUrl>
   </PropertyGroup>
  
